# weread-poster

./: README.md  pyproject.toml  requirements.txt  view.html
.github/workflows/: weread_poster.yml
docs/tutorial/: 01-auth-and-loader.md  02-drawer-and-interpolation.md  03-animation-and-cli.md  04-github-actions-deployment.md  README.md
tests/: test_plan.md  test_weread_poster.py
weread_poster/: __main__.py  auth.py  cli.py  config.py  drawer.py  loader.py  poster.py  structures.py  utils.py
